--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-h1{
-    background-color: aquamarine;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.container{
+    width: 1100px;
+    margin: 0 auto;
 }
