--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@
     width: 1100px;
     margin: 0 auto;
 }
+.d-flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
